[tool.poetry]
name = "udemy-rf"
version = "0.1.0"
description = ""
authors = ["FlorentPajot <florent@bricoprive.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.4"
matplotlib = "^3.2.1"
plotly = "^4.6.0"
cufflinks = "^0.17.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
